# actor-benchmarks

./: Makefile  README.md  package.json  pyproject.toml
.github/workflows/: crawler_benchmarks.yaml  crawler_benchmarks_cron.yaml  run_code_checks.yaml
benchmark_server/: README.md  __main__.py  benchmark_server.py  pyproject.toml
benchmark_server_js/: package.json  test_server.js
crawler_actors/: benchmark.py  benchmark_server.py
crawler_actors/beautifulsoup_crawler/: pyproject.toml
crawler_actors/beautifulsoup_crawler/beautifulsoup_crawler/: main.py
crawler_actors/beautifulsoup_crawler_py/: Dockerfile  pyproject.toml
crawler_actors/beautifulsoup_crawler_py/.actor/: actor.json  input_schema.json
crawler_actors/beautifulsoup_crawler_py/beautifulsoup_crawler/: main.py
crawler_actors/cheerio_crawler_js/: package-lock.json  package.json
crawler_actors/cheerio_crawler_js/.actor/: Dockerfile  actor.json  input_schema.json
crawler_actors/cheerio_crawler_js/src/: main.js  test_server.js
crawler_actors/parsel_crawler_py/: Dockerfile  pyproject.toml
crawler_actors/parsel_crawler_py/.actor/: actor.json  input_schema.json
crawler_actors/parsel_crawler_py/parsel_crawler/: benchmark_server.py  main.py
crawler_actors/playwright_crawler/: Dockerfile  pyproject.toml
crawler_actors/playwright_crawler/.actor/: actor.json
crawler_actors/playwright_crawler/playwright_crawler/: __main__.py  main.py
crawler_actors/playwright_crawler_js/: package-lock.json  package.json
crawler_actors/playwright_crawler_js/.actor/: Dockerfile  actor.json  input_schema.json
crawler_actors/playwright_crawler_js/src/: main.js
crawler_actors/playwright_crawler_py/: Dockerfile  pyproject.toml
crawler_actors/playwright_crawler_py/.actor/: actor.json  input_schema.json
crawler_actors/playwright_crawler_py/playwright_crawler/: main.py
crawler_actors_configurations/: benchmark.py
crawler_actors_configurations/beautifulsoup_crawler/: pyproject.toml
crawler_actors_configurations/beautifulsoup_crawler/.actor/: input_schema.json
crawler_actors_configurations/beautifulsoup_crawler/beautifulsoup_crawler/: main.py  routes.py
crawler_actors_configurations/playwright_crawler/.actor/: input_schema.json
crawler_actors_configurations/playwright_crawler/playwright_crawler/: main.py  routes.py
src/actor_benchmarks/: actor_benchmark.py
