[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actor_benchmarks"
version = "0.0.1"
description = ""
authors = [
    {name = "Josef Prochazka",email = "josef.prochazka@apify.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawlee[all]>=0.6.0",
    "apify",
    "apify_client",
    "typer>=0.15.2",
    "pytest",
    "pytest-asyncio",
    "uvicorn",
]


[dependency-groups]
dev = [
    "mypy~=1.15.0",
    "pre-commit~=4.2.0",
    "ruff~=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/actor_benchmarks"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
files = ["src", "crawler_actors"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src", "crawler_actors"]
