[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchmark_server"
version = "0.0.1"
description = ""
authors = [
    {name = "Josef Prochazka",email = "josef.prochazka@apify.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest-asyncio",
    "uvicorn",
    "yarl",
]
