[project]
name = "beautifulsoup_crawler"
version = "0.0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "crawlee[beautifulsoup] @ git+https://github.com/Mantisus/crawlee-python.git@impit-client",
    "apify",
    "apify-client @ git+https://github.com/apify/apify-client-python.git@timeout-rework"
]

