[project]
name = "parsel_crawler"
version = "0.0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawlee[parsel]",
    "apify",
    "certifi<=2025.1.31",
    "benchmark_server @ git+https://github.com/apify/actor-benchmarks.git@add-test-server#subdirectory=benchmark_server",
]

