[project]
name = "parsel_crawler"
version = "0.0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawlee[parsel] @ git+https://github.com/apify/crawlee-python.git@master",
    "apify @ git+https://github.com/apify/apify-sdk-python.git@new-apify-storage-clients",
    "certifi<=2025.1.31",
]

